okhttp-based WDS client