@@ -1,4 +1,3 @@
-import org.hidetake.gradle.swagger.generator.GenerateSwaggerCode
 import org.springframework.boot.gradle.plugin.SpringBootPlugin
 
 plugins {
@@ -7,7 +6,7 @@ plugins {
     id 'com.google.cloud.tools.jib' version '3.2.1' apply false
     id "org.sonarqube" version "4.0.0.2929" apply false
     id 'idea'
-    id 'org.hidetake.swagger.generator' version '2.19.2' apply false
+    id "org.openapi.generator" version "6.5.0" apply false
     id 'java'
     id 'com.gorylenko.gradle-git-properties' version '2.4.1'
     id 'jacoco'
@@ -25,7 +24,6 @@ subprojects {
     apply plugin: 'idea'
     apply plugin: 'java'
     apply plugin: 'jvm-test-suite'
-    apply plugin: 'org.hidetake.swagger.generator'
 
     ext {
         artifactGroup = "${group}.${rootProject.name}"
@@ -39,15 +37,9 @@ subprojects {
         }
 
         dependencies {
-            dependency 'io.swagger.core.v3:swagger-annotations:2.1.13'
-            dependency 'io.swagger.codegen.v3:swagger-codegen-cli:3.0.34'
             dependency 'org.yaml:snakeyaml:2.0'
             dependency 'io.netty:netty-handler:4.1.94.Final'
         }
-    }
-
-    tasks.withType(GenerateSwaggerCode).configureEach {
-        jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED'] // for jvm 16+
     }
 }
 
